update contrast ratio

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
         
          const resultDiv = document.getElementById('result');
          resultDiv.innerHTML = `
-           <p>Contrast Ratio: ${data.contrastRatio}</p>
+           <p>Contrast Ratio: ${data.ratio}</p>
            <p>AA Pass: ${data.AA}</p>
            <p>AAA Pass: ${data.AAA}</p>
            <p>AA Large Text Pass: ${data.AALarge}</p>
