--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,14 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Color Contrast Checker</title>
+ <script type="module" src="index.js"></script>
  <style>
    body {
      font-family: Arial, sans-serif;
      padding: 20px;
+     margin: 0;
+    padding: 20px;
+    box-sizing: border-box;
    }
    label {
      display: block;
@@ -38,9 +42,35 @@
      border: 1px solid #ccc;
      margin-left: 5px;
    }
+
+   #image{
+    max-width: 100%; 
+    height: auto; 
+   }
+
+.image-container {
+  display: flex;
+  justify-content: space-between; 
+}
+
+.image-item img {
+  width: 100%; 
+  height: auto; 
+  display: block; 
+}
+
+.image-item {
+  flex: 1;
+  margin: 0 10px;
+}
+
  </style>
 </head>
 <body>
+  <!--<img id="image">-->
+  <a href="#" download="download" id="anchor" style="text-decoration: none">
+    <button id="download-button" style="display: none">Download</button>
+  </a>
  <h1>Color Contrast Checker</h1>
  <label for="foregroundColor">Foreground Color (Hex):</label>
  <input type="text" id="foregroundColor" placeholder="Enter foreground color hex" required>
@@ -50,6 +80,11 @@
  <div class="color-square" id="backgroundSquare"></div>
  <button id="checkContrast">Check Contrast</button>
  <div id="result"></div>
+ <div class="image-container" id="image-container" style="display: none">
+  <div class="image-item"><img id="image1" alt="Original Photo"></div>
+  <div class="image-item"><img id="image2" alt="Protanopia"></div>
+  <div class="image-item"><img id="image3" alt="Deuteranopia"></div>
+</div>
  <script src="contrast.js"></script>
 </body>
 </html>
