--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Contrast Checker</title>
     <script type="module" src="index.js"></script>
+    <script src="rgblind.js"></script>
     <style>
       body {
         font-family: Arial, sans-serif;
