--- a/src/index.html
+++ b/src/index.html
@@ -62,10 +62,12 @@
 
       #leftHexText {
         font-size: 14px;
+        margin-left: 10px;
       }
 
       #rightHexText {
         font-size: 14px;
+        margin-left: 80px;
       }
 
       #newHexCodesText {
@@ -197,11 +199,23 @@
         border-radius: 10px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       }
-
+      .filter-container {
+        max-width: 480px;
+        margin-top: 0px;
+        background-color: #fff;
+        padding: 2px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
       .contrast-heading {
         padding: 5px;
         font-size: 14px;
         margin-bottom: 20px;
+      }
+      .filter-heading {
+        padding: 5px;
+        font-size: 14px;
+        margin-bottom: 5px;
       }
 
       .contrast-button {
@@ -217,15 +231,15 @@
       }
       .hex-squares-container {
         display: flex;
-        justify-content: center; /* Center components horizontally */
+        justify-content: center;
         align-items: center;
       }
 
       .hex-input-container {
         display: flex;
-        justify-content: center; /* Center components horizontally */
+        justify-content: center;
         align-items: center;
-        margin-top: 10px; /* Add margin for spacing */
+        margin-top: 4px;
       }
 
       input[type="text"] {
@@ -331,18 +345,27 @@
     <a href="#" download="download" id="anchor" style="text-decoration: none">
       <button id="download-button" style="display: none">Download</button>
     </a>
-    <div class="image-container" id="image-container" style="display: none">
-      <div class="image-item" style="display: none">
-        <img id="image1" alt="Original Photo" />
-        <div class="image-caption">Original</div>
+    <div class="filter-container">
+      <div class="filter-heading">
+        View your design with different colorblindness filters:
       </div>
-      <div class="image-item">
-        <img id="image2" alt="Protanopia" class="protanopia" />
-        <div class="image-caption">Protanopia</div>
-      </div>
-      <div class="image-item">
-        <img id="image3" alt="Deuteranopia" class="deuteranopia" />
-        <div class="image-caption">Deuteranopia</div>
+      <div class="image-container" id="image-container" style="display: none">
+        <div class="image-item" style="display: none">
+          <img id="image1" alt="Original Photo" />
+          <div class="image-caption">Original</div>
+        </div>
+        <div class="image-item">
+          <img id="image2" alt="Protanopia" class="protanopia" />
+          <div class="image-caption">
+            Protanopia<br /><span">(red)</span>
+          </div>
+        </div>
+        <div class="image-item">
+          <img id="image3" alt="Deuteranopia" class="deuteranopia" />
+          <div class="image-caption">
+            Deuteranopia<br /><span">(red & green)</span>
+          </div>
+        </div>
       </div>
     </div>
     <div class="contrast-container">
@@ -368,6 +391,7 @@
         />
       </div>
       <button id="checkContrast">Submit</button>
+      <hr style="border: 2px solid #ddd;">
 
       <div id="result"></div>
 
@@ -399,12 +423,14 @@
         </table>
       </div>
 
+      <hr style="border: 2px solid #ddd;">
+
       <div id="newHexCodesText">
         <div id="leftHexText"></div>
         <div id="rightHexText"></div>
       </div>
 
-      <div id="result2"></div>
+      <div id="result2"> </div>
 
       <div id="tableResultNew">
         <table id="resultTableNew">
