updated ui, added color picker, added multi tabs

--- a/src/index2.html
+++ b/src/index2.html
@@ -126,7 +126,7 @@
       placeholder="Enter background color hex"
       required
     />
-    <div class="color-square" id="backgroundSquare"></div>
+    <!-- <div class="color-square" id="backgroundSquare"></div> -->
     <button id="checkContrast">Check Contrast</button>
     <div id="result"></div>
     <div class="image-container" id="image-container" style="display: none">
