--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Contrast Checker</title>
     <script type="module" src="index.js"></script>
+    <script type="module" src="contrast.js"></script>
     <script src="rgblind.js"></script>
     <style>
         body {
-            font-family: Optima, sans-serif;
+            /*font-family: Optima, sans-serif;*/
             padding: 20px;
             margin: 0;
             box-sizing: border-box;
@@ -81,13 +82,37 @@
         }
         input[type="color"] {
             margin: 10px 5px;
-            width: 50px;
-            height: 50px;
+            width: 110px;
+            height: 70px;
             border: none;
             padding: 0;
+            appearance: none;
             cursor: pointer;
-            display: none; /* Hide color pickers */
+            background-color: #ffffff; /* Default color to white */
+            outline:  1px solid #ddd; /* Grey outline */
+            border-radius: 10px;
+            
+            /*display: none;  Hide color pickers */
         }
+        input[type="color"]::-webkit-color-swatch-wrapper {
+            padding: 0; /* Remove padding inside the color picker */
+        }
+        input[type="color"]::-webkit-color-swatch {
+            border: none; /* Remove the inner border to fill the color completely */
+        }
+        .color-picker-icon {
+            position: absolute;
+            right: 8px;
+            bottom: 8px;
+            width: 20px;
+            height: 20px;
+            pointer-events: none; /* Let the click event go to the input element */
+        }
+        .color-picker-container {
+            position: relative;
+            display: inline-block;
+        }
+
         #checkContrast {
             margin-top: 15px;
         }
@@ -120,7 +145,8 @@
 <body>
     <div class="tabs">
         <div class="tab active" data-tab="contrastChecker">Contrast Checker</div>
-        <div class="tab" data-tab="colorSuggestions">Color Suggestions</div>
+        <div class="tab" data-tab="AI">AI</div>
+        <div class="tab" data-tab="palleteFeedback">Pallete Checker</div>
     </div>
 
     <div class="tab-content active" id="contrastChecker">
@@ -128,19 +154,24 @@
             <div class="contrast-heading">
                 Enter hex codes or choose colors to test contrast:
             </div>
-            <div class="hex-squares-container">
+            <!-- <div class="hex-squares-container">
                 <div class="color-square" id="foregroundSquare"></div>
                 <div class="color-square" id="backgroundSquare"></div>
-            </div>
+            </div> -->
             <div class="hex-input-container">
-                <div>
-                    <!-- The color pickers are hidden but functional -->
-                    <input type="color" id="foregroundColorPicker" />
-                    <input type="color" id="backgroundColorPicker" />
+              <div class="hex-squares-container">
+                <div class="color-picker-container">
+                    <input type="color" id="foregroundColorPicker" value="#ffffff" />
+                    <img src="../assets/color-picker-icon.png" class="color-picker-icon" alt="color picker icon" />
                 </div>
+                <div class="color-picker-container">
+                    <input type="color" id="backgroundColorPicker" value="#ffffff" />
+                    <img src="../assets/color-picker-icon.png" class="color-picker-icon" alt="color picker icon" />
+                </div>
+            </div>
                 <div>
-                    <input type="text" id="foregroundColor" placeholder="Foreground Hex" required />
-                    <input type="text" id="backgroundColor" placeholder="Background Hex" required />
+                    <input type="text" id="foregroundColor" placeholder="Foreground Hex"/>
+                    <input type="text" id="backgroundColor" placeholder="Background Hex">
                 </div>
             </div>
             <button id="checkContrast">Submit</button>
@@ -157,14 +188,14 @@
                     <tbody>
                         <tr>
                             <td>
-                                <!-- <button id="normalAAImage">Normal Text</button> -->
+                                <button id="normalAAImage">Normal Text</button>
                             </td>
                             <td id="AA"></td>
                             <td id="AAA"></td>
                         </tr>
                         <tr>
                             <td>
-                                <!-- <button id="largeAAAImage">Large Text</button> -->
+                                <button id="largeAAAImage">Large Text</button>
                             </td>
                             <td id="AALarge"></td>
                             <td id="AAALarge"></td>
@@ -175,14 +206,19 @@
         </div>
     </div>
 
-    <div class="tab-content" id="colorSuggestions">
-        <h2>Color Suggestions</h2>
-        <p>Here you can provide a brief description of what the color suggestions feature will do.</p>
+    <div class="tab-content" id="AI">
+        <h2>Briefly describe your theme and we will give you a similar color pallete with accessible colors.</h2>
+        <p>Disclaimer: sjfnajaskfjsakfk;</p>
     </div>
 
+    <div class="tab-content" id="palleteFeedback">
+      <h2>Check all the colors in your design at once!</h2>
+      <p>Disclaimer: kejfajkfnalskfnaskjfn</p>
+  </div>
+
     <script>
-        const foregroundSquare = document.getElementById("foregroundSquare");
-        const backgroundSquare = document.getElementById("backgroundSquare");
+        //const foregroundSquare = document.getElementById("foregroundSquare");
+        //const backgroundSquare = document.getElementById("backgroundSquare");
         const foregroundColorPicker = document.getElementById("foregroundColorPicker");
         const backgroundColorPicker = document.getElementById("backgroundColorPicker");
         const foregroundColorInput = document.getElementById("foregroundColor");
@@ -191,36 +227,27 @@
         // Update color swatches when color is picked
         foregroundColorPicker.addEventListener("input", (event) => {
             const color = event.target.value;
-            foregroundSquare.style.backgroundColor = color;
+            //foregroundSquare.style.backgroundColor = color;
             foregroundColorInput.value = color.slice(1); // Strip the '#' from the hex code
         });
 
         backgroundColorPicker.addEventListener("input", (event) => {
             const color = event.target.value;
-            backgroundSquare.style.backgroundColor = color;
+            //backgroundSquare.style.backgroundColor = color;
             backgroundColorInput.value = color.slice(1);
         });
 
         // Update the color squares when hex code is manually entered
         foregroundColorInput.addEventListener("input", () => {
             const hex = `#${foregroundColorInput.value}`;
-            foregroundSquare.style.backgroundColor = hex;
+            //foregroundSquare.style.backgroundColor = hex;
             foregroundColorPicker.value = hex;
         });
 
         backgroundColorInput.addEventListener("input", () => {
             const hex = `#${backgroundColorInput.value}`;
-            backgroundSquare.style.backgroundColor = hex;
+            //backgroundSquare.style.backgroundColor = hex;
             backgroundColorPicker.value = hex;
-        });
-
-        // Add click event to color squares to trigger color pickers
-        foregroundSquare.addEventListener("click", () => {
-            foregroundColorPicker.click();
-        });
-
-        backgroundSquare.addEventListener("click", () => {
-            backgroundColorPicker.click();
         });
 
         // Tab functionality
