--- a/src/index.html
+++ b/src/index.html
@@ -236,6 +236,40 @@ textarea {
     font-size: 10px; /* Adjust the size as needed */
     color: #555; /* You can also change the color if you want */
 }
+
+#normalAAImage {
+        background-color: #fff;
+        border-radius: 7px;
+        font-size: 15px;
+        width: 140px;
+        height: 50px;
+        color: #fff;
+      }
+      #largeAAAImage {
+        background-color: #fff;
+        border-radius: 7px;
+        width: 140px;
+        font-size: 20px;
+        height: 50px;
+        color: #fff;
+      }
+      #normalAAImage1 {
+        background-color: #fff;
+        border-radius: 7px;
+        font-size: 15px;
+        width: 140px;
+        height: 50px;
+        color: #fff;
+      }
+      #largeAAAImage1 {
+        background-color: #fff;
+        border-radius: 7px;
+        width: 140px;
+        font-size: 20px;
+        height: 50px;
+        color: #fff;
+      }
+      
     </style>
 </head>
 <body>
@@ -334,7 +368,7 @@ textarea {
                   </tbody>
                 </table>
             </div>
-            
+
         </div>
     </div>
 
