alternate colors hex codes, outlined colors, copy to clipboard, table2 layout

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,23 @@
             font-size: 16px;
             cursor: pointer; /* Change cursor to pointer */
         }
+        .color-square2 {
+           width: 30px;
+           height: 30px;
+           display: inline-block;
+           border-radius: 10px;
+           border: 2px solid #ddd;
+           margin-right: 10px;
+           font-size: 16px;
+           cursor: pointer; /* Change cursor to pointer */
+       }
+
         #result {
+            text-align: center;
+            font-size: 16px;
+            margin-top: 20px;
+        }
+        #result2 {
             text-align: center;
             font-size: 16px;
             margin-top: 20px;
